<!--
  ~ Copyright 2018 Yordan P. Dieguez
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/info">
        <com.github.ypdieguez.smsradar.preference.SmsInfoPreference android:layout="@layout/sms_info_preference" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings">

        <com.github.ypdieguez.smsradar.preference.SmsAmountPreference
            android:defaultValue="@string/default_value_sms_to_send"
            android:hint="0"
            android:inputType="number"
            android:key="sms_to_send"
            android:summary="@string/default_value_sms_to_send"
            android:title="@string/pref_title_sms_to_send" />

        <com.github.ypdieguez.smsradar.preference.SmsRemainingPreference
            android:defaultValue="true"
            android:key="notify_sms_warning"
            android:layout="@layout/preference_sms_remaining"
            android:title="@string/pref_title_notify" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="notify_sms_exhausted"
            android:summary="@string/pref_summary_notify_sms_exhausted"
            android:title="@string/pref_title_notify" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="notify_sms_reset"
            android:summary="@string/pref_summary_notify_sms_reset"
            android:title="@string/pref_title_notify" />

        <RingtonePreference
            android:defaultValue="@string/default_value_ringtone"
            android:key="ringtone"
            android:ringtoneType="notification"
            android:title="@string/pref_title_ringtone" />

    </PreferenceCategory>

</PreferenceScreen>
