<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2018 Yordan P. Dieguez
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  -->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:paddingBottom="64dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="80dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:text="@string/intro_title_2"
            android:textColor="@android:color/white"
            android:textSize="40sp"
            android:textStyle="bold"
            app:fontFamily="@font/roboto" />


        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:drawableTop="@drawable/message_processing"
            android:gravity="center"
            android:text="@string/intro_description_2_1"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            app:fontFamily="@font/open_sans" />

    </LinearLayout>

    <Button
        android:id="@+id/btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginTop="8dp"
        android:text="@string/intro_grant_permission"
        android:textColor="@color/primary_text"
        android:textSize="14sp"
        app:fontFamily="@font/roboto" />

</FrameLayout>